feat: add Playwright testing setup and update deployment script

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,8 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# playwright
+tests/
+test-results/
+playwright-report/
