--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.3.2"
+    "vite": "^6.3.2",
+    "vite-plugin-node-polyfills": "^0.23.0"
   }
 }
