chore: update dependencies and add new features
- Added Font Awesome and Annyang for enhanced UI and voice recognition capabilities.
- Updated package.json to include new dependencies: @fortawesome/fontawesome-free, annyang, and wrangler.
- Modified postcss.config.js for proper syntax.
- Updated style.css to include Font Awesome styles and added new styles for voice search button and footer.
- Adjusted tailwind.config.js to scan all relevant files for dynamic classes.
- Added VSCode settings to ignore unknown at-rules in CSS, SCSS, and LESS.
- Created a Caddyfile for server configuration with basic settings.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "author": "Peter Wood <peter@peterwood.dev>",
   "license": "ISC",
   "dependencies": {
-    "pokedex-promise-v2": "^4.2.1"
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "annyang": "^2.6.1",
+    "pokedex-promise-v2": "^4.2.1",
+    "wrangler": "^4.12.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.52.0",
